Remove zookeeper dependency